# image-streamer

./: .gitignore  CMakeLists.txt  README.md
examples/basic/: CMakeLists.txt
examples/basic/src/: main.cpp
src/: ImageStreamer.cpp  Utility.cpp
src/ImageStreamer/: ImageStreamer.h  Utility.h
